feat: change path for pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <link
       href="//db.onlinewebfonts.com/c/06fcebf2389f170c4e0f9e5286b1c5f6?family=Azo+Sans+Lt"
       rel="stylesheet"
@@ -17,15 +17,15 @@
   </head>
   <body>
     <header>
-      <img src="../assets/cwJzPHv2uNhGoTpEc-200-x.webp" alt="logo" />
+      <img src="./assets/cwJzPHv2uNhGoTpEc-200-x.webp" alt="logo" />
 
       <nav>
         <ul>
           <li><a href="./index.html" class="here">Accueil</a></li>
-          <li><a href="./kitchen.html">Cuisine</a></li>
-          <li><a href="./team.html">Equipe</a></li>
-          <li><a href="./history.html">Histoire</a></li>
-          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./pages/kitchen.html">Cuisine</a></li>
+          <li><a href="./pages/team.html">Equipe</a></li>
+          <li><a href="./pages/history.html">Histoire</a></li>
+          <li><a href="./pages/contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="delivery">
@@ -47,7 +47,7 @@
             plats savoureux qui éveilleront à coup sûr la nostalgie chez ceux
             qui nous accompagnent tout au long de notre vie.
           </p>
-          <a href="./history.html">Chronologie de la maison</a>
+          <a href="./pages/history.html">Chronologie de la maison</a>
         </div>
       </section>
       <section id="menu-home">
@@ -63,7 +63,7 @@
             de la cuisine péruvienne. Aujourd'hui, plus que jamais, nous voulons
             partager ce sentiment avec vous.
           </p>
-          <a href="./kitchen.html">Ce que nous offrons</a>
+          <a href="./pages/kitchen.html">Ce que nous offrons</a>
         </div>
       </section>
       <section id="fluid">
@@ -73,7 +73,7 @@
             Un cœur qui bat fort et avec une vie qui lui est propre. Cocktails
             classiques et créatifs, plats à partager et plus encore.
           </p>
-          <a href="./kitchen.html">Plus</a>
+          <a href="./pages/kitchen.html">Plus</a>
         </div>
         <div class="wines">
           <h2>Vin</h2>
@@ -95,7 +95,7 @@
               l'entretien, un ingénieur en industrie alimentaire, des
               administrateurs, etc.
             </p>
-            <a href="./team.html">Plus</a>
+            <a href="./pages/team.html">Plus</a>
           </div>
         </div>
       </section>
