--- a/pages/kitchen.html
+++ b/pages/kitchen.html
@@ -26,7 +26,7 @@
       <img src="../assets/cwJzPHv2uNhGoTpEc-200-x.webp" alt="logo" />
       <nav>
         <ul>
-          <li><a href="./index.html">Accueil</a></li>
+          <li><a href="../index.html">Accueil</a></li>
           <li><a href="./kitchen.html" class="here">Cuisine</a></li>
           <li><a href="./team.html">Equipe</a></li>
           <li><a href="./history.html">Histoire</a></li>
