--- a/pages/team.html
+++ b/pages/team.html
@@ -25,7 +25,7 @@
       <img src="../assets/cwJzPHv2uNhGoTpEc-200-x.webp" alt="logo" />
       <nav>
         <ul>
-          <li><a href="./index.html">Accueil</a></li>
+          <li><a href="../index.html">Accueil</a></li>
           <li><a href="./kitchen.html">Cuisine</a></li>
           <li><a href="./team.html" class="here">Equipe</a></li>
           <li><a href="./history.html">Histoire</a></li>
