fix(index.html): update path for image

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </section>
       <section id="menu-home">
         <img
-          src="../assets/images/0040-Astrid-y-gastón-2554-Foto-Foto-Liz-Tasa-2020_-1200x800.jpg"
+          src="./assets/images/0040-Astrid-y-gastón-2554-Foto-Foto-Liz-Tasa-2020_-1200x800.jpg"
           alt="image menu home"
         />
         <div class="menu-home-text">
