fix(index.html): add class parallax

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </header>
     <main>
-      <section id="presentation">
+      <section id="presentation" class="parallax">
         <div class="presentation-text">
           <h2 hidden>Presentation</h2>
           <p>
@@ -84,7 +84,7 @@
           </p>
         </div>
       </section>
-      <section id="our-team">
+      <section id="our-team" class="parallax">
         <div class="fade-team">
           <div class="our-team-text">
             <h2>Notre équipe</h2>
@@ -99,7 +99,7 @@
           </div>
         </div>
       </section>
-      <section id="book-home">
+      <section id="book-home" class="parallax">
         <div class="book-home-text">
           <h2>Reserver</h2>
           <p>
