fix(kitchen.html): add class parallax

--- a/pages/kitchen.html
+++ b/pages/kitchen.html
@@ -48,7 +48,7 @@
           ans d'histoire savoureuse.
         </p>
       </section>
-      <section id="our-menu">
+      <section id="our-menu" class="parallax">
         <div class="our-menu-text">
           <h2>Notre menu</h2>
           <p>
@@ -58,7 +58,7 @@
           </p>
         </div>
       </section>
-      <div id="ice-section"></div>
+      <div id="ice-section" class="parallax"></div>
       <section id="bar">
         <img
           src="../assets/images/IMG_7544-1250x833.jpg"
