fix(history.html): update structure

--- a/pages/history.html
+++ b/pages/history.html
@@ -47,7 +47,7 @@
           </p>
         </div>
       </section>
-      <section id="beginning">
+      <section id="beginning" class="parallax">
         <div class="fade-white">
           <div class="beginning-text">
             <p>
@@ -88,7 +88,6 @@
         <img src="../assets/images/4.jpg" alt="image section mosaique" />
         <div class="fourth-section-group-text">
           <div class="fourth-section-text">
-            <div class="linea2"></div>
             <h2>1538</h2>
             <p>
               Trois ans après la fondation de Lima, les Espagnols ont attribué
@@ -96,7 +95,6 @@
             </p>
           </div>
           <div class="fourth-section-text">
-            <div class="linea3"></div>
             <h2>1560</h2>
             <p>
               Antonio de Rivera, le nouveau propriétaire de la hacienda, a
@@ -106,11 +104,10 @@
           </div>
         </div>
       </section>
-      <section id="fifth-section">
+      <section id="fifth-section" class="parallax">
         <div class="fade-black">
           <div class="fifth-section-group-text">
             <div class="fifth-section-text">
-              <div class="linea4"></div>
               <p>DEUXIÈME MOITIÉ DU</p>
               <h2>XVIIe SIECLE</h2>
               <p>
@@ -120,7 +117,6 @@
               </p>
             </div>
             <div class="fifth-section-text">
-              <div class="linea5"></div>
               <p>MILIEU</p>
               <h2>XVIIIe SIECLE</h2>
               <p>
@@ -137,7 +133,6 @@
         <img src="../assets/images/9.jpg" alt="image section tableau" />
         <div class="sixth-section-group-text">
           <div class="sixth-section-text">
-            <div class="linea6"></div>
             <h2>1777</h2>
             <p>
               Le domaine a été acheté par Isidoro de Cortazar y Abarca, le
@@ -147,7 +142,6 @@
             </p>
           </div>
           <div class="sixth-section-text">
-            <div class="linea7"></div>
             <h2>1821</h2>
             <p>
               1821 Rosa Gutierrez de Cossio, comtesse de San Isidro, a organisé
@@ -156,11 +150,10 @@
           </div>
         </div>
       </section>
-      <section id="seventh-section">
+      <section id="seventh-section" class="parallax">
         <div class="fade-black">
           <div class="seventh-section-group-text">
             <div class="seventh-section-text">
-              <div class="linea8"></div>
               <h2>1853</h2>
               <p>
                 Après que le domaine ait appartenu à différents propriétaires,
@@ -168,7 +161,6 @@
               </p>
             </div>
             <div class="seventh-section-text">
-              <div class="linea9"></div>
               <h2>1855</h2>
               <p>
                 Pendant la guerre civile péruvienne entre José Rufino Echenique
@@ -183,7 +175,6 @@
         <img src="../assets/images/3.jpg" alt="image section mirroir" />
         <div class="eightth-section-group-text">
           <div class="eightth-section-text">
-            <div class="linea8"></div>
             <h2>1920</h2>
             <p>
               L'Avenida Arequipa a été aménagée et la propriété a été divisée.
@@ -195,7 +186,6 @@
             </p>
           </div>
           <div class="eightth-section-text">
-            <div class="linea9"></div>
             <p class="date">8 DECEMBRE</p>
             <h2>1972</h2>
             <p>
@@ -205,11 +195,10 @@
           </div>
         </div>
       </section>
-      <section id="nineth-section">
+      <section id="nineth-section" class="parallax">
         <div class="fade-black">
           <div class="nineth-section-group-text">
             <div class="nineth-section-text">
-              <div class="linea10"></div>
               <h2>1999</h2>
               <p>
                 La maison a été utilisée pour accueillir la quatrième édition de
@@ -217,7 +206,6 @@
               </p>
             </div>
             <div class="nineth-section-text">
-              <div class="linea11"></div>
               <h2>2014</h2>
               <p>
                 La Casa Moreyra abrite la nouvelle Astrid&Gastón Casa Moreyra.
