fix(team.html): add class parallax

--- a/pages/team.html
+++ b/pages/team.html
@@ -55,7 +55,7 @@
           alt="salon image section"
         />
       </section>
-      <section id="kitchen">
+      <section id="kitchen" class="parallax">
         <div class="kitchen-text">
           <h2>La cuisine</h2>
           <p>
@@ -69,7 +69,7 @@
           </p>
         </div>
       </section>
-      <div id="harvest"></div>
+      <div id="harvest" class="parallax"></div>
       <section id="bar">
         <div class="bar-text">
           <h2>Bar</h2>
@@ -83,7 +83,7 @@
           alt="bar image section"
         />
       </section>
-      <section id="wine-waiter">
+      <section id="wine-waiter" class="parallax">
         <div class="wine-waiter-text">
           <h2>Sommelier</h2>
           <p>
