fix(contact.html): upadate text

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,7 +56,7 @@
             <p>Dimanche (brunch) - 11:00 - 16:00</p>
           </div>
           <div class="take-away">
-            <p>Commande / Livraison</p>
+            <p>Commande / Livraison :</p>
             <p>Mardi à Dimanche</p>
             <p>- Déjeuner - 13:00 - 15:30</p>
             <p>- Diner - 19:00 - 23:00</p>
