fix(index.html): add css links and update index html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./styles/general.css" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/components/footer.css" />
     <link
       href="//db.onlinewebfonts.com/c/06fcebf2389f170c4e0f9e5286b1c5f6?family=Azo+Sans+Lt"
       rel="stylesheet"
@@ -28,8 +30,8 @@
           <li><a href="./pages/contact.html">Contact</a></li>
         </ul>
       </nav>
-      <div class="delivery">
-        <a href="delivery.html">Commande Livraison</a>
+      <div class="products">
+        <a href="./pages/products.html">Commande Livraison</a>
       </div>
     </header>
     <main>
