fix(history.html): add class fade-white to the header

--- a/pages/history.html
+++ b/pages/history.html
@@ -37,7 +37,9 @@
           </ul>
         </nav>
       </div>
-      <h1>L'histoire</h1>
+      <div class="fade-white">
+        <h1>L'histoire</h1>
+      </div>
     </header>
     <main>
       <section id="title">
