fix(index.html): update name to link products.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </nav>
       <div class="products">
-        <a href="./pages/products.html">Commande Livraison</a>
+        <a href="./pages/products.html">Commande / Livraison</a>
       </div>
     </header>
     <main>
