fix: update name for form.js

--- a/pages/team.html
+++ b/pages/team.html
@@ -228,6 +228,6 @@
         © Copyright 2023 Astrid&Gastón | Developed by totodej
       </div>
     </footer>
-    <script src="../js/modal.js"></script>
+    <script src="../js/form.js"></script>
   </body>
 </html>
